--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,97 @@ body {
   margin: 0;
   font-family: "Poppins";
 }
+main{
+  min-height: 100%;
+  display: grid;
+  grid-template-columns: 1.2fr 1fr 1fr;
+}
+.panel{
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.welcome{
+  background: #323230;
+  padding: 1.8rem 3.75rem;
+  grid-auto-rows: 1fr;
+}
+.panel .text{
+  background: #eeeee7;
+  color: #323230;
+  padding: 1.8rem 3.75rem;
+}
+.panel.welcome nav a{
+  color: #a8a8a8;
+  text-decoration: none;
+  margin-right: 1.25rem;
+}
+.panel.welcome p{
+  color: #a8a8a8;
+  max-width: 540px;
+  line-height: 3em;
+}
+.panel.welcome h1{
+  color: #eeeee7;
+  font-size: 3em;
+}
+.panel.welcome footer{
+  align-self: flex-end;
+}
+/* About Panel */
+.panel.about{
+  grid-template-rows: 3fr 1fr;
+  overflow: hidden;
+  
+}
+.panel.about img{
+  min-width: 100%;
+  min-height: 100%;
+}
+.panel.photos{
+  grid-template-rows: 1fr 3fr;
+  overflow: hidden;
+}
+.panel.photos img{
+  min-width: 100%;
+  min-height: 100%;
+}
+@media screen and (max-width:1440px) {
+  main{
+    grid-template-columns: 1fr 1fr;
+  }
+  .panel.photos{
+    grid-column: span 2;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+}
+@media screen and (max-width:1120px) {
+  main{
+    grid-template-columns: 100%;
+    grid-template-rows: 100dvh 90dvh 90dvh;
+  }
+  .panel.about {
+    grid-row: 2;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+  }
+  .panel img{
+    width: 100%;
+    object-fit: cover;
+  }
+}
+@media screen and (max-width:768px) {
+  main{
+    grid-template-rows: 700px 600px 600px;
+  }
+  .panel.about, .panel.photos{
+    grid-template-columns: 1fr;
+    grid-column: span 1;
+    grid-template-rows: 1fr 1fr;
+    border-bottom: 1px solid #dcdcd0;
+  }  
+  .panel.about img, .panel.photos img{
+    height: 100%;
+    width: 100%;
+  }
+}
